--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:               Poole
 tagline:             The Jekyll Butler
 url:                 http://getpoole.com
 paginate:            1
-baseurl:             "https://fadhlan.github.io/poole/"
+baseurl:             "https://fadhlanfauzanudien.github.io/poole/"
 
 # Assets
 #
